--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="setting">Setting</string>
     <string name="log_out">Log out</string>
     <string name="account">Account</string>
+    <string name="plantMainPic">Plant</string>
+    <string name="statMainPic">Statistic</string>
+
 </resources>
